Fix header overlap, adjust css

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -90,6 +90,17 @@ h4.logo-font.my-1{
 }
 }
 
+/* pad the top a bit when navbar is collapsed on mobile */
+@media (max-width: 991px) {
+  .header-container {
+      padding-top: 116px;
+  }
+
+  body {
+      height: calc(100vh - 116px);
+  }
+}
+
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
   .fixed-top-desktop-only {
